--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div id="result"></div>
 <script src="script.js"></script>
 <div id="credit">
-<h6><marquee direction="left" behaviour="alternate"><i>created by </i>Tamil Navi</marquee></h6></div>
+<h6><marquee direction="left" behaviour="alternate"><i>created by </i>Bharath</marquee></h6></div>
 
 </body>
 </html>
