--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     
-<h1>FLAMES Calculator</h1>
+<h1>FLAMES Calculator<br>Vignesh and Ravi gay</h1>
+
 <form id="flamesForm">
     <label for="yourName">Your Name:</label>
     <input type="text" id="yourName" required>
