--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     
-<h1>FLAMES Calculator<br>Vignesh and Ravi gay</h1>
+<h1>FLAMES Calculator</h1>
 
 <form id="flamesForm">
     <label for="yourName">Your Name:</label>
-    <input type="text" id="yourName" required>
+    <input type="text" id="yourName" placeholder ="ex., Vignesh" required>
     <br><br>
     <label for="partnerName">Partner's Name:</label>
-    <input type="text" id="partnerName" required>
+    <input type="text" id="partnerName" placeholder="ex.,ravikumar" required>
     <br><br>
     <button type="button" onclick="calculateFlames()">Calculate</button>
 </form>
