--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <label for="partnerName">Partner's Name:</label>
     <input type="text" id="partnerName" placeholder="ex.,ravikumar" required>
     <br><br>
-    <button type="button" onclick="calculateFlames()">Calculate</button>
+    <button type="button" onclick="sample.html">Calculate</button>
 </form>
 <div id="result"></div>
 <script src="script.js"></script>
