--- a/sample.html
+++ b/sample.html
@@ -3,6 +3,8 @@
 <title> pranked</title>
 </head>
 <body align =center text= white bgcolor= black>
-<h1> Scientifically you're<br> GAY</h1>
+<br><br><br>
+<h1> Scientifically you're <br> <br><big>GAY</big></h1>
+<img src= gay.gif height= 50px width= 80px>
 </body>
 </html>
