--- a/sample.html
+++ b/sample.html
@@ -5,6 +5,6 @@
 <body align =center text= white bgcolor= black>
 <br><br><br>
 <h1> Scientifically you're <br> <br><big>GAY</big></h1>
-<img src= gay.gif height= 400px width= 600px>
+<img src= Gay.gif height= 400px width= 600px>
 </body>
 </html>
