--- a/sample.html
+++ b/sample.html
@@ -6,5 +6,10 @@
 <br><br><br>
 <h1> Scientifically you're <br> <br><big>GAY</big></h1>
 <img src= Gay.gif height= 400px width= 600px>
+</form>
+<div id="result"></div>
+<script src="script.js"></script>
+<div id="credit">
+<h6><marquee direction="left" behaviour="alternate"><i>created by </i>tamilnavi</marquee></h6></div>
 </body>
 </html>
