--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <input type="text" id="partnerName" placeholder="ex.,ravikumar" required>
     <br><br>
 <a href="sample.html">
-    <button type="button" onclick= calculate flames()>Calculate</button>
+    <button type="button" onclick=" calculateFlames()">Calculate</button>
 </a>
 </form>
 <div id="result"></div>
