--- a/sample.html
+++ b/sample.html
@@ -6,7 +6,7 @@
 <br><br><br>
 <h1> Scientifically you're <br> <br><big>GAY</big></h1>
 <img src= Gay.gif height= 400px width= 600px>
-</form>
+calculateFlames()
 <div id="result"></div>
 <script src="script.js"></script>
 <div id="credit">
