--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <label for="partnerName">Partner's Name:</label>
     <input type="text" id="partnerName" placeholder="ex.,ravikumar" required>
     <br><br>
-
+<a href= sample.html>
     <button type="button" onclick=" calculateFlames()">Calculate</button>
-
+</a>
 </form>
 <div id="result"></div>
 <script src="script.js"></script>
